_sass/_layout.scss
/**
* Site header
*/
.site-header {
  border-top: 5px solid $brand-color;
  border-bottom: 1px solid $grey-color-light;
  min-height: 56px;
  padding-top: $spacing-unit / 2;
  position: relative;

  .site-title {
    width: 130px;
    border: none;
    float: left;
  }

  .site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
      display: none;
    }

    .page-link {
      color: $text-color;
      line-height: $base-line-height;
      background-color: $grey-color-light;
      padding: 10px 20px;
      -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
      border-radius: 3px;

      // Gaps between nav items, but not on the first one
      &:not(:first-child) {
        margin-left: 10px;
      }

      &:hover {
        color: $brand-color-light;
        background-color: $brand-color;
        transition: all .5s;
      }

      &.active {
        color: $brand-color-light;
        background-color: $brand-color;

        &:hover {
          color: $brand-color-compliment-light;
          background-color: $brand-color-compliment;
        }

      }
    }

    @include media-query($on-palm) {
      position: absolute;
      top: 9px;
      right: 30px;
      background-color: $background-color;
      border: 1px solid $grey-color-light;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
      text-align: right;

      .menu-icon {
        display: block;
        float: right;
        width: 36px;
        height: 26px;
        line-height: 0;
        padding-top: 10px;
        text-align: center;

        > svg {
          width: 18px;
          height: 15px;

          path {
            fill: $grey-color-dark;
          }
        }
      }

      .trigger {
        clear: both;
        display: none;
      }

      &:hover .trigger {
        display: block;
        padding-bottom: 5px;
      }

      .page-link {
        display: block;
        padding: 5px 10px;
      }
    }
  }
}

/**
* Mega footer
*/
.site-mega-footer {
  background-color: lighten($footer-background-color, 5%);
  padding: $spacing-unit 0 $spacing-unit / 2 0;
  border-top: 1px solid $grey-color-dark;

  .footer-columns {
    line-height: 1em;
    font-size: $small-font-size;
    color: $grey-color;
    @extend %clearfix;

    .column {
      float: left;
      margin-bottom: $spacing-unit / 2;
      padding-left: $spacing-unit / 2;
      width: -webkit-calc(33% - (#{$spacing-unit} / 2));
      width:         calc(33% - (#{$spacing-unit} / 2));


      @include media-query($on-palm) {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
      }

      h1 {
        font-size: $base-font-size;
      }

      ul {
        margin: 0;

        li {
          line-height: $spacing-unit;
          list-style: none;

          a {
            color: $grey-color;

            &:hover {
              color: $brand-color;
            }

            &.active {
              color: $brand-color;
              font-weight: bold;

              &:hover {
                color: $brand-color-compliment;
              }

            }

          }

        }

      }

    }

  }

} /* .site-mega-footer */

/**
* Site footer
*/
.site-footer {
  background-color: $footer-background-color;
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit / 2;

  code {
    border-color: lighten($footer-background-color, 20%);
    background-color: lighten($footer-background-color, 10%);
    color: $grey-color;
  }

  p {
    line-height: 1.3em;
    font-size: $small-font-size;

    &.copyright {
      float: left;
    }

    &.powered-by {
      text-align: right;
    }

  }

  @include media-query($on-laptop) {
    p {
      line-height: $base-line-height;

      &.copyright {
        float: none;
      }

      &.powered-by {
        text-align: left ;
      }

    }

  }

} /* .site-footer */



/**
* Page content
*/
.page-content {
  padding: $spacing-unit 0;
}

.page-heading {
  font-size: 20px;
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }

  h2 {
    font-size: 150%;
    margin-bottom: 0em;
  }

  .post-link {
    display: block;
    line-height: 1.5em;
  }

  .post-more {
    background-color: #ededed;
    color: $grey-color-dark;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    display: inline-block;
    padding: 5px 15px;
    text-decoration: none;

    &:hover {
      color: $brand-color-light;
      background-color: $brand-color;
      transition: all .5s;
    }

  }

}

/**
* Posts
*/
.post-header {
  margin-bottom: $spacing-unit;
}

.post-title {
  font-size: 42px;
  letter-spacing: -1px;
  line-height: 1.5em;
  margin-bottom: 0em;

  @include media-query($on-laptop) {
    font-size: 36px;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;

  .date {
    padding-right: 5px;
  }

  .author {
    padding: 0 5px;
  }

  .categories {
    padding-left: 5px;
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    font-size: 32px;

    @include media-query($on-laptop) {
      font-size: 28px;
    }
  }

  h3 {
    font-size: 26px;

    @include media-query($on-laptop) {
      font-size: 22px;
    }
  }

  h4 {
    font-size: 20px;

    @include media-query($on-laptop) {
      font-size: 18px;
    }
  }
}

.empty {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  background-color: $brand-color-light;
  padding: $spacing-unit;
}

